[package]
name = "ceo-tweet-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Analyze CEO tweets and correlate with stock price movements using Rust, Prolog, and Lean"

[[bin]]
name = "ceo-tweet-analyzer"
path = "src/main.rs"

[[bin]]
name = "web-server"
path = "src/web_server.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime and HTTP
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Optional: Prolog integration (for future use)
# scryer-prolog = "0.9"

# Optional: plotting (can add later)
# plotters = "0.3"

agent-twitter-client = "0.1.2"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
